--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h1{
 .porcentagem{
     position: relative;
     border: 2px solid;
+    width: 100%;
     height: 150px;
     padding: 5px;
     display: flex;
@@ -27,7 +28,14 @@ h1{
     align-items: center;
 }
 
+h3{
+    width: 20%;
+    font-size: .8rem;
+    font-weight: 400;
+}
+
 .input{
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,6 +43,7 @@ h1{
 
 input{
     padding: 5px;
+    width: calc(80%/2);
     text-align: center;
 }
 
