--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1{
 .porcentagem{
     position: relative;
     border: 2px solid;
-    width: 100%;
+    /* width: 100vh; */
     height: 150px;
     padding: 5px;
     display: flex;
